# modem-manager-gui

./: AUTHORS  Changelog  Makefile  README.rst  configure  meson.build
.tx/: config
appdata/: LINGUAS  Makefile  ar.po  bn_BD.po  de.po  es.po  fr.po  id.po  ku.po  lt.po  meson.build  modem-manager-gui.appdata.pot  modem-manager-gui.appdata.xml.in  modem-manager-gui.desktop.in  pl.po  pl_PL.po  ru.po  si.po  sk_SK.po  tr.po  uk.po  uz@Latn.po  zh_CN.po
help/: LINGUAS  Makefile  de.po  id.po  meson.build  modem-manager-gui-help.pot  pl_PL.po  uk.po  uz@Latn.po
help/C/: about.page  contrib-code.page  contrib-translations.page  index.page  license.page  report-bugs.page  usage-config.page  usage-contacts.page  usage-getinfo.page  usage-modem.page  usage-netsearch.page  usage-sms.page  usage-traffic.page  usage-ussd.page
help/ar/: ar.po
help/bn_BD/: bn_BD.po
help/de/: de.po
help/el/: el.po
help/fr/: fr.po
help/id/: id.po
help/pl/: pl.po
help/pl_PL/: pl_PL.po
help/ru/: ru.po
help/si/: si.po
help/sk_SK/: sk_SK.po
help/tr/: tr.po
help/uk/: uk.po
help/uz@Latn/: uz@Latn.po
help/zh_CN/: zh_CN.po
man/: LINGUAS  Makefile  manhelper.py  meson.build  modem-manager-gui.1  modem-manager-gui.pot  pl.po  uk.po  uz@Cyrl.po  uz@Latn.po
man/ar/: ar.po  meson.build
man/bn/: bn.po  meson.build
man/cs/: cs.po
man/de/: de.po  meson.build
man/es/: es.po
man/fr/: fr.po  meson.build
man/id/: id.po  meson.build
man/pl/: meson.build  pl.po
man/pt_BR/: meson.build  pt_BR.po
man/ru/: meson.build  ru.po
man/si/: si.po
man/sk_SK/: sk_SK.po
man/tr/: meson.build  tr.po
man/uk/: meson.build  uk.po
man/uz@Cyrl/: meson.build  uz@Cyrl.po
man/uz@Latn/: meson.build  uz@Latn.po
man/zh_CN/: meson.build  zh_CN.po
po/: LINGUAS  Makefile  ar.po  bn_BD.po  de.po  el.po  es.po  fr.po  hu.po  id.po  it.po  lt.po  meson.build  modem-manager-gui.pot  pl.po  pl_PL.po  pt_BR.po  ru.po  si.po  sk_SK.po  tr.po  uk.po  uz@Cyrl.po  uz@Latn.po  zh_CN.po
polkit/: LINGUAS  Makefile  ar.po  bn_BD.po  de.po  es.po  fr.po  id.po  meson.build  pl.po  pl_PL.po  polkit.its  pt_BR.po  ru.linuxonly.modem-manager-gui.policy.in  ru.linuxonly.modem-manager-gui.policy.pot  ru.po  sk_SK.po  tr.po  uk.po  zh_CN.po
polkit/its/: polkit.its  polkit.loc
resources/: Makefile  meson.build  modem-manager-gui.ui
resources/ui/: modem-manager-gui.ui
src/: Makefile  addressbooks.c  addressbooks.h  ayatana.c  ayatana.h  connection-editor-window.c  connection-editor-window.h  contacts-page.c  contacts-page.h  dbus-utils.c  dbus-utils.h  devices-page.c  devices-page.h  encoding.c  encoding.h  info-page.c  info-page.h  libpaths.c  libpaths.h  main.c  main.h  meson.build  mmguicore.c  mmguicore.h  modem-settings.c  modem-settings.h  netlink.c  netlink.h  notifications.c  notifications.h  polkit.c  polkit.h  preferences-window.c  preferences-window.h  providersdb.c  providersdb.h  resources.h.meson  scan-page.c  scan-page.h  settings.c  (+21 more)
src/modules/: Makefile  connman112.c  historyshm.c  historyshm.h  meson.build  mm06.c  mm07.c  nm09.c  ofono109.c  pppd245.c  uuid.c  uuid.h
src/plugins/: Makefile  meson.build  ofonohistory.c
src/scripts/: Makefile  meson.build
