datadir = join_paths([ get_option('prefix'), get_option('datadir'), 'modem-manager-gui' ])
pixmapsdir = join_paths([ get_option('prefix'), get_option('datadir'), 'pixmaps' ])

install_subdir('pixmaps', install_dir: datadir)
install_subdir('sounds', install_dir: datadir)
install_subdir('ui', install_dir: datadir)

install_data('modem-manager-gui.png', install_dir: pixmapsdir)
